@@ -41,6 +41,17 @@ public abstract class Exchanger implements Singleton
         once every generation (or pseudogeneration). */
     public abstract Population postBreedingExchangePopulation(EvolutionState state);
 
+	/** Typically called by postBreedingExchangePopulation prior to adding individuals to
+		the population.
+		Override this method to process the immigrant, or provide a different Individual,
+		prior to accepting it into the population. 
+		The subpopulation and subpopulation index are provided, which indicate where it will 
+		eventually be placed.  The default simply returns the individual.  */
+	protected Individual process(EvolutionState state, int thread, Individual ind, int subpopulation, int index)
+		{
+		return ind;
+		}
+
     /** Called after preBreedingExchangePopulation(...) to evaluate whether or not
         the exchanger wishes the run to shut down (with ec.EvolutionState.R_FAILURE) --
         returns a String (which will be printed out as a message) if the exchanger
